

                 SCons - a software construction tool

                            Change Log

NOTE: The 4.0.0 Release of SCons will drop Python 2.7 Support
NOTE: Please add your name below in alphabetical order by last name.
NOTE: Please include a reference to any Issues resolved by your changes in the bullet(s) you add

RELEASE  VERSION/DATE TO BE FILLED IN LATER

  From William Deegan:
    - Fix broken clang + MSVC 2019 combination by using MSVC configuration logic to 
      propagate'VCINSTALLDIR' and 'VCToolsInstallDir' which clang tools use to locate
      header files and libraries from MSVC install. (Fixes GH Issue #3480)
    - Added C:\msys64\mingw64\bin to default mingw and clang windows PATH's.  This 
      is a reasonable default and also aligns with changes in Appveyor's VS2019 image.
    - Drop support for Python 2.7. SCons will be Python 3.5+ going forward.
    - Change SCons.Node.ValueWithMemo to consider any name passed when memoizing Value() nodes
    - Fix Github Issue #3550 - When using Substfile() with a value like Z:\mongo\build\install\bin
      the implementation using re.sub() would end up interpreting the string and finding regex escape
      characters where it should have been simply replacing existing text. Switched to use string.replace().
    
  From Jeremy Elson:
    - Updated design doc to use the correct syntax for Depends()

  From Adam Gross:
    - Added support for taking instances of the Value class as implicit
      dependencies.
    - Added new module SCons.Scanner.Python to allow scanning .py files.
    - Added support for explicitly passing a name when creating Value() nodes. This may be useful
      when the value can't be converted to a string or if having a name is otherwise desirable.

  From Andrew Morrow:
    - Fix Issue #3469 - Fixed improper reuse of temporary and compiled files by Configure when changing
      the order and/or number of tests.  This is done by using the hash of the generated temporary files